Fix Staff email overflow card

--- a/src-sass/components/_card.sass
+++ b/src-sass/components/_card.sass
@@ -50,6 +50,8 @@
 				font-size: 1em
 				margin-bottom: 0.4em
 				transition: color 0.2s
+				text-overflow: ellipsis
+				overflow: hidden
 	h3
 		color: $color-main
 		line-height: 1.4em
